--- a/src/app/bakery/admin-home/admin-home.component.html
+++ b/src/app/bakery/admin-home/admin-home.component.html
@@ -130,7 +130,7 @@
         </div>
         <div style="width: 180px; height: 180px; margin-top: 20px; border: solid #88888888 0.5px; float: right; padding: 5px">
             <div style="height: 120px;width: 170px">
-                <img [src]="image" alt="" height="120px" width="170px">
+                <img *ngIf="image" [src]="image" alt="" height="120px" width="170px">
             </div>
             <hr style="margin: 5px">
             <button class="btn  btn-light" style="width: 100%; height: 35px;">
