--- a/src/app/bakery/admin-home/admin-home.component.html
+++ b/src/app/bakery/admin-home/admin-home.component.html
@@ -128,15 +128,18 @@
             </form>
             <br>
         </div>
-        <div style="width: 180px; height: 180px; margin-top: 20px; border: solid #88888888 0.5px; float: right; padding: 5px">
+        <div [ngClass]="{'image-validation-error': formControlErrorMessage['prodImage']}" style="width: 180px; min-height: 180px; margin-top: 20px; border: solid #88888888 0.5px; float: right; padding: 5px">
             <div style="height: 120px;width: 170px">
                 <img *ngIf="image" [src]="image" alt="" height="120px" width="170px">
             </div>
             <hr style="margin: 5px">
             <button class="btn  btn-light" style="width: 100%; height: 35px;">
-                <input type="file" (change)="uploadImage($event)" style="height: 25px; width: 150px; position: absolute; z-index: 2; opacity: 0;"> 
+                <input type="file" accept=".jpeg,.png,.jpg" (change)="uploadImage($event)" style="height: 25px; width: 150px; position: absolute; z-index: 2; opacity: 0;"> 
                 <span class="fa fa-upload"></span> Upload product pic
             </button>
+            <div  *ngIf="formControlErrorMessage['prodImage']">
+                {{formControlErrorMessage['prodImage']}}
+            </div>
         </div>
     </div>
 </div>
