--- a/src/app/bakery/open-admin-account/open-admin-account.component.html
+++ b/src/app/bakery/open-admin-account/open-admin-account.component.html
@@ -19,11 +19,11 @@
         </div>
       </div>
       <hr style="margin-bottom: 0px">
-      <div class="image-sec">
+      <!-- <div class="image-sec">
         <img [src]="image" alt="" height="128" width="150">
         <input type="file" title="Select account picture" value="Select account picture" (change)="uploadImage($event)">
       </div>
-      <hr style="margin-top: 0px">
+      <hr style="margin-top: 0px"> -->
       <form [formGroup]="registerForm">
         <div class="row">
           <div class="col-md-12">
