--- a/src/app/bakery/admin-home/admin-home.component.html
+++ b/src/app/bakery/admin-home/admin-home.component.html
@@ -69,11 +69,14 @@
         <h4> <i class="fa fa-eye"></i> View all shop products</h4>
         <hr style="margin-top: 0px">
         <view-shop-product 
+        (removeProductEvent)="removeProduct($event)"
         [productWrapper]="productWrapper" 
         [formOpenningEvent]="formOpenningEvent" 
         [openFormId]="openFormId"
         [itemId]="i"
          *ngFor="let productWrapper of products; let i = index"></view-shop-product>
+         <div class="loader" *ngIf="products.length < 1"></div>
+         <br>
     </div>
 
     <div *ngIf="isAllRegisteredCustomer" class="administration-area col-md-8">
@@ -87,8 +90,8 @@
     <div *ngIf="isAllOrders" class="administration-area col-md-8">
         <h4> <i class="fa fa-plus-circle"></i> View all customer orders</h4>
         <hr style="margin-top: 0px">
-        <div>
-
+        <div style="margin-bottom: 20px;">
+            <view-shop-customer-order></view-shop-customer-order>
         </div>
     </div>
 
