--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,7 @@ body, html {
     height: 60px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 1s linear infinite;
+    margin: auto;
 }
 
 @keyframes spin {
