--- a/src/app/bakery/admin-home/home-actions/view-shop-order/view-shop-order.component.html
+++ b/src/app/bakery/admin-home/home-actions/view-shop-order/view-shop-order.component.html
@@ -34,7 +34,7 @@
 
         <hr style="margin: 0px 0px 5px;">
         <div class="products">
-            <div class="loader" *ngIf="spinnerIsShowing"></div>
+            <div class="loader" *ngIf="false"></div>
         </div>
     </mat-expansion-panel>
 
