--- a/src/app/bakery/admin-home/home-actions/view-shop-order/view-shop-order.component.html
+++ b/src/app/bakery/admin-home/home-actions/view-shop-order/view-shop-order.component.html
@@ -1,54 +1,78 @@
-<mat-accordion>
+<div class="user-manage-main">
+    <div class="order">
+        <div class="details">
+            <!-- <span></span>
+            <span></span>
+            <span></span>
+            <span>hhh</span> -->
+            <ul>
+                <li>{{cusOrder.id}}</li>
+                <li>{{util.formatDate(cusOrder.custOrderDate)+', '+cusOrder.custOrderTime}}</li>
+                <!-- <li>R {{orderTotalCost | number :'1.2-2'}}</li> -->
+                <li>{{cusOrder.orderStatus}}</li>
+            </ul>
+        </div>
 
-    <mat-expansion-panel>
-        <mat-expansion-panel-header>
-            <mat-panel-title style="width: 5%">
-                <!-- <label for="">ORDER ID</label><br> -->
-                <div class="values">1</div>
-            </mat-panel-title>
-            <mat-panel-title style="width: 5%">
-                <!-- <label for="">NUMBER OF PRODUCTS</label><br> -->
-                <div class="values">17</div>
-            </mat-panel-title>
-            <mat-panel-title style="width: 20%">
-                <!-- <label for="">ORDER TOTAL COST</label><br> -->
-                <div class="values">R1</div>
-            </mat-panel-title>
-            <mat-panel-description>
-                <!-- <label for="">ORDER DATE</label><br> -->
-                <div class="values">16 DEC 2018</div>
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-        <hr style="margin: 0px 0px 1px;">
-        <div class="row">
-            <div class="col-md-10"></div>
-            <div class="col-md-2 actions">
-                <div id="act">
-                    <div class="fa fa-trash-o"></div>
-                </div>
-                <div id="act">
-                    <div class="fa fa-print"></div>
-                </div>
+        <span class="actions">
+            <label>Actions</label>
+            <span class="actions-icons">
+                <span (click)="processAction(viewId === 1 ? -1 : 1)" class="fa {{ viewId !== 1 ? 'fa-eye' : 'fa-eye-slash'}}" title="{{ viewId !== 1 ? 'View order products' : 'Hide order products'}}"
+                    (click)="viewOrderDetails(cusOrder.id)">
+
+                </span>
+                <span (click)="processAction(2)" class="fa fa-print" title="Print this order report"></span>
+                <span (click)="processAction(3)" *ngIf="cusOrder.orderStatus === 'OPEN'" class="fa fa-edit" title="Mark as processed"></span>
+                <span (click)="processAction(0)" *ngIf="cusOrder.orderStatus === 'CLOSED'" class="fa fa-trash-o" title="Delete this order"></span>
+            </span>
+        </span>
+    </div>
+    <div class="products-panel" *ngIf="viewId === 0">
+        <h4>Confirm order deletion action.</h4>
+        <div>
+            This action cannot be undo, Please proceed if you are sure.
+        </div>
+        <br>
+        <div *ngIf="!spinnerIsShowing" style="margin: auto;width: 50%;">
+            <button autofocus="true" class="btn  btn-light" style="width: 100%; height: 40px;" (click)="onRemoveOrderClick()">
+                <span class="fa fa-trash"></span> Delete this order
+            </button>
+        </div>
+        <div class="loader" *ngIf="spinnerIsShowing"></div>
+        <br>
+        <span class="fa fa-close hide-prod-btn" title="Close panel" (click)="viewId = -1"></span>
+    </div>
+    <div class="products-panel" *ngIf="viewId === 1">
+        <h4>Order products</h4>
+        <div class="loader" *ngIf="spinnerIsShowing"></div>
+        <div *ngIf="!spinnerIsShowing">
+            <div class="order-prod" *ngFor="let pw of orderProducts">
+                <img [src]="pw.productImage" alt="">
+                <span>
+
+                    <span class="sub-title">P.. name</span>: {{pw.product.productName}}<br>
+                    <span class="sub-title">P.. price</span>: R {{pw.product.price | number :'1.2-2'}}<br>
+                    <span class="sub-title">P.. quantity</span>: {{pw.product.quantity}} units.<br>
+                    <span class="sub-title">Sub total</span>: R {{pw.product.price * pw.product.quantity| number
+                    :'1.2-2'}}<br>
+
+                </span>
             </div>
         </div>
-
-        <hr style="margin: 0px 0px 5px;">
-        <div class="products">
-            <div class="loader" *ngIf="false"></div>
+        <span class="fa fa-close hide-prod-btn"  title="Close panel" (click)="viewId = -1"></span>
+    </div>
+    <div class="products-panel" *ngIf="viewId === 3">
+        <h4>Mark as processed action confirmation.</h4>
+        <div>
+            This action cannot be undo, Please proceed if you are sure.
         </div>
-    </mat-expansion-panel>
-
-
-    <!-- <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Self aware panel
-            </mat-panel-title>
-            <mat-panel-description>
-                Currently I am {{panelOpenState ? 'open' : 'closed'}}
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-        <p>I'm visible because I am open</p>
-    </mat-expansion-panel> -->
-
-</mat-accordion>
+        <br>
+        <div *ngIf="!spinnerIsShowing" style="margin: auto;width: 50%;">
+            <button autofocus="true" class="btn  btn-light" style="width: 100%; height: 40px;" (click)="markAsProsessedClick()">
+                <span class="fa fa-edit"></span> Mark this order as processed
+            </button>
+        </div>
+        <div class="loader" *ngIf="spinnerIsShowing"></div>
+        <br>
+        <span class="fa fa-close hide-prod-btn" title="Close panel" (click)="viewId = -1"></span>
+    </div>
+</div>
