--- a/src/app/bakery/admin-top-nav/admin-top-nav.component.html
+++ b/src/app/bakery/admin-top-nav/admin-top-nav.component.html
@@ -1,5 +1,5 @@
 <div class="top-nav">
-  <span class="logo" (click)="loadHome()"></span>
+  <span class="logo"></span>
   <div class="top-nav-actions">
     <span class="act" *ngIf="logonUserName"><span class="fa fa-user-circle"></span> {{logonUserName}}</span>
     <span class="act" *ngIf="logonUserName" (click)="logout()"><span class="fa fa-sign-out" ></span> Logout</span>
