--- a/src/styles.css
+++ b/src/styles.css
@@ -48,3 +48,15 @@ body, html {
     box-shadow: inherit;
     /* padding: 0px; */
 }
+
+.empty-list{
+    text-align: center;
+    width: 100%;
+    border: dotted 1px gray;
+    padding: 30px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    font-size: 16px;
+    font-weight: 600;
+    color: rgb(163, 34, 124);
+}
